--- a/sass/_test.scss
+++ b/sass/_test.scss
@@ -1,8 +1,7 @@
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-      -ms-border-radius: $radius;
-          border-radius: $radius;
+/*! Test 1 */
+.herpaderp {
+    color:aqua;
+    .blerp {
+        font-weight: bold;
+    }
 }
-
-.box { @include border-radius(10px); }
