Add flex-container class
Adding a custom class in order to try to make vertical alignment easier.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,8 +2,7 @@
 @import "bootstrap";
 
 /* TEST STYLES */
-@import "_test";
-@import "_test-2";
+@import "_vertical-alignment";
 
 /* MARKLOGIC.COM STYLES */
 @import "marklogic.com/typography";
