--- a/sass/_vertical-alignment.scss
+++ b/sass/_vertical-alignment.scss
@@ -1,7 +1,5 @@
 /*! Custom Flex Style */
-.flex-container {
-    display: -webkit-flex; /* Safari */
+.flex-center {
     -webkit-align-items: center; /* Safari 7.0+ */
-    display: flex;
     align-items: center;
 }
