--- a/sass/marklogic.com/_variables.scss
+++ b/sass/marklogic.com/_variables.scss
@@ -107,7 +107,7 @@ $gray-lightish: #ccc;
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //* Load fonts from this directory.
-$icon-font-path: "/wp-content/themes/marklogic-v2/fonts/";
+$icon-font-path: "https://marklogic-marketing.github.io/bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 //* File name for all font files.
 // $icon-font-name:          "glyphicons-halflings-regular"
