Added relative-height styles
These styles include classes that allow the use of divs who have a
height set absolutely to their width.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,6 +3,7 @@
 
 /* TEST STYLES */
 @import "_vertical-alignment";
+@import "_relative-height";
 
 /* MARKLOGIC.COM STYLES */
 @import "marklogic.com/typography";
