--- a/sass/_relative-height.scss
+++ b/sass/_relative-height.scss
@@ -7,23 +7,24 @@ $heights: 1, 2, 3, 4, 16;
 $widths: 1, 2, 3, 9;
 
 // Divides height by width to generate padding-top for each ratio. For example, a ratio of 2:1 will generate a padding-top of 50%
-// Makes direct children divs absolutely positioned to fit the space defined by the padding-top
 @each $width in $widths {
     @each $height in $heights {
-        .relative-height-#{$height}-#{$width} {
+        div.relative-height-#{$height}-#{$width} {
             position: relative;
             width: 100%;
             padding-top: #{$width/$height*100%};
-            > div {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                overflow: hidden;
-            }
         }
     }
+}
+
+// Makes direct children divs absolutely positioned to fit the space defined by the padding-top
+div[class^="relative-height-"] > div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
 }
