Creation of Landing Page Mobile Styles
See landing-pages.scss

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,7 @@
 /* TEST STYLES */
 @import "_vertical-alignment";
 @import "_relative-height";
+@import "_landing-pages";
 
 /* MARKLOGIC.COM STYLES */
 @import "marklogic.com/typography";
