--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,6 +5,7 @@
 @import "_vertical-alignment";
 @import "_relative-height";
 @import "_landing-pages";
+@import "_mkto-forms";
 
 /* MARKLOGIC.COM STYLES */
 @import "marklogic.com/typography";
