--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -3,7 +3,7 @@
 
 
 // Apply Boostrap's form-control to relevant elements. High specificity used to override Marketo Styles
-.mktoForm .MktoFormRow .mktoFieldWrap {
+.mktoForm .mktoFormRow .mktoFieldWrap {
     select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
        @extend .form-control;
     } 
