--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -11,7 +11,6 @@
     } 
 }
 
-
 // Expand to full width
 .mktoForm .mktoFieldWrap {
     width: 100%;
@@ -33,7 +32,6 @@
 // Make Rows flexible
 // Make Rows akin to row divs - they remove extra side margin from the children's gutter padding
 .mktoForm .mktoFormRow {
-    margin-bottom: 15px;
     display: flex;
     flex-direction: row;
     margin-left: -15px;
@@ -42,8 +40,14 @@
 
 // Accommodate any number of columns 
 .mktoForm .mktoFormCol {
-    flex-grow: 1;
     padding: 0 15px;
+    margin-bottom: 15px;
+    width: 100%;
+    
+    @media (max-width: $screen-sm-max) {
+        flex-grow: 1;
+        flex-basis: 0;
+    }
 }
 
 // Button spacing
@@ -59,6 +63,7 @@
 
 // Margin on bottom
 .mktoForm form {
+    min-width: 100%;
     margin-bottom: 30px;
 }
 
