--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -33,10 +33,12 @@
 .mktoForm .mktoFormRow {
     margin-left: -15px;
     margin-right: -15px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     
     @media (min-width: $screen-sm-min) {
-        display: flex;
-        flex-direction: row;
+        flex-wrap: nowrap;
     }
 }
 
@@ -46,11 +48,8 @@
     padding: 0 15px;
     margin-bottom: 15px !important;
     width: 100%;
-    
-    @media (min-width: $screen-sm-min) {
-        flex-grow: 1;
-        flex-basis: 0;
-    }
+    flex-grow: 1;
+    flex-basis: 0;
 }
 
 // Button spacing
@@ -68,6 +67,11 @@
 .mktoForm form {
     min-width: 100%;
     margin-bottom: 30px;
+}
+
+// Fix Extra padding
+.mktoForm {
+    padding: 0 !important;
 }
 
 // Fix Radio button labels
