Form Styles Troubleshooting

--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -34,6 +34,8 @@
     margin-left: -15px;
     margin-right: -15px;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     
     @media (max-width: $screen-xs-max) {
         -ms-flex-direction: column;
@@ -47,8 +49,10 @@
 .mktoForm .mktoFormCol {
     padding: 0 15px;
     margin-bottom: 15px !important;
+    width: 100%;
     flex-grow: 1;
     flex-basis: 0;
+    min-height: auto !important;
 }
 
 // Button spacing
