--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -4,6 +4,7 @@
 
 // Apply Boostrap's form-control to relevant elements. High specificity used to override Marketo Styles. 
 // Min width prevents revealed hidden fields from collapsing
+// Max width prevents flex from increasing column width beyond its parent - weird bug consistently occurs without it
 .mktoForm .mktoFormRow .mktoFieldWrap {
     select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
         @extend .form-control;
@@ -22,10 +23,13 @@
     display: none !important;
 }
 
-// Reapply Label margin
+// Reapply Label styles
 // Min width prevents revealed hidden labels from collapsing
 .mktoForm .mktoFormRow .mktoFieldWrap label.mktoLabel {
+    width: 100% !important;
+    font-size: 14px;
     margin-bottom: 5px;
+    
     min-width: 1px;
 }
 
@@ -34,11 +38,11 @@
 .mktoForm .mktoFormRow {
     margin-left: -15px;
     margin-right: -15px;
+    
     display: flex;
     -ms-flex-direction: row;
     -webkit-box-orient: horizontal;
     flex-direction: row; 
-    
     @media (max-width: $screen-xs-max) {
         -ms-flex-direction: column;
         -webkit-box-orient: vertical;
@@ -53,14 +57,17 @@
     margin-bottom: 15px !important;
     min-width: 0;
     min-height: auto !important;
+    
     flex-grow: 1;
     flex-basis: 0;
-
 }
 
 // Button spacing
 .mktoForm .mktoButtonRow {
     padding: 10px 0;
+    .mktoButtonWrap {
+        margin-left: 0px !important;
+    }
 }
 
 // Make button purty
@@ -87,4 +94,3 @@
 .mktoForm .mktoRadioList {
     width: 100%;
 }
-
