--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,7 @@
 @import "marklogic.com/variables";
 @import "bootstrap";
 
-/* TEST STYLES */
+/* CUSTOM MARKETO STYLES */
 @import "_vertical-alignment";
 @import "_relative-height";
 @import "_landing-pages";
