--- a/sass/_landing-pages.scss
+++ b/sass/_landing-pages.scss
@@ -63,7 +63,7 @@ body.lp-body {
 }
 // Styles triggerable by Marketo user. Tilts image on large screens, tucks image behind panel - with gradient shadows - on mobile screens
 .lp-asset-boolean {
-    .lp-asset img img {
+    .lp-asset-img img {
         transform: rotate(-2deg);
         left: -5px;
     }
@@ -86,9 +86,9 @@ body.lp-body {
                 
                 // Small Shadow 
                 background: white;
-                background: -moz-linear-gradient( white 95%, #aaa 100% ), linear-gradient( top, white 0%, #aaa 5%, #aaa 95%, white 100% );
-                background: -webkit-linear-gradient( white 95%, #aaa 100% ), linear-gradient( top, white 0%, #aaa 5%, #aaa 95%, white 100% );
-                background:	linear-gradient( white 95%, #aaa 100% ), linear-gradient( to bottom, white 0%, #aaa 5%, #aaa 95%, white 100% );
+                background: -moz-linear-gradient( top white 95%, #aaa 100% ), linear-gradient( left, white 0%, #aaa 5%, #aaa 95%, white 100% );
+                background: -webkit-linear-gradient( top white 95%, #aaa 100% ), linear-gradient( left, white 0%, #aaa 5%, #aaa 95%, white 100% );
+                background:	linear-gradient( to bottom white 95%, #aaa 100% ), linear-gradient( to right, white 0%, #aaa 5%, #aaa 95%, white 100% );
                 background-blend-mode: screen;
             }
         }
