--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -56,7 +56,8 @@
     padding: 0 15px;
     margin-bottom: 15px !important;
     min-width: 0;
-    min-height: auto !important;
+    // Prevents columns from collapsing
+    min-height: 60px !important;
     
     flex-grow: 1;
     flex-basis: 0;
