--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,6 +6,7 @@
 @import "_relative-height";
 @import "_landing-pages";
 @import "_mkto-forms";
+@import "_mkto-type";
 
 /* MARKLOGIC.COM STYLES */
 @import "marklogic.com/typography";
