--- a/sass/_landing-pages.scss
+++ b/sass/_landing-pages.scss
@@ -103,6 +103,15 @@ body.lp-body {
         }
     }
 }
+img.lp-3-asset-img {
+    box-shadow: none !important;
+    image-rendering:-moz-crisp-edges;          /* Firefox        */
+	image-rendering:-o-crisp-edges;            /* Opera          */
+	image-rendering:-webkit-optimize-contrast; /* Safari         */
+	image-rendering:optimize-contrast;         /* CSS3 Proposed  */
+	image-rendering:crisp-edges;               /* CSS4 Proposed  */
+	-ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
+}
 img.lp-ty-img {
     position: relative;
     transform: rotate(4deg);
