Image styles troubleshooting

--- a/sass/_landing-pages.scss
+++ b/sass/_landing-pages.scss
@@ -112,7 +112,7 @@ img.lp-3-asset-img {
 	image-rendering:crisp-edges;               /* CSS4 Proposed  */
 	-ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
 }
-lp-video-img img {
+.lp-video-img img {
     border: 8px solid white;
 }
 img.lp-ty-img {
