--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -58,7 +58,7 @@
     min-width: 0;
     // Prevents columns from collapsing
     min-height: 60px !important;
-    
+    width: 100%;
     flex-grow: 1;
     flex-basis: 0;
 }
