Image Styles Troubleshooting

--- a/sass/_landing-pages.scss
+++ b/sass/_landing-pages.scss
@@ -105,6 +105,7 @@ body.lp-body {
 }
 img.lp-3-asset-img {
     box-shadow: none !important;
+    transform: none !important;
 }
 .lp-video-img img {
     border: 8px solid white;
