--- a/sass/_landing-pages.scss
+++ b/sass/_landing-pages.scss
@@ -46,6 +46,12 @@ body.lp-body {
     -moz-box-shadow: 0px 2px 11px 0px rgba(0,0,0,0.45); 
     box-shadow: 0px 2px 11px 0px rgba(0,0,0,0.45);
 }
+@mixin rotate-img ($degrees) {
+    transform: rotate(#{$degrees}deg);
+    -webkit-backface-visibility: hidden; /* Chrome, Safari, Opera */
+   	backface-visibility: hidden;
+    outline: 1px solid transparent;
+}
 .lp-asset-img {
     position: relative;
     margin-right: 30px;
@@ -67,10 +73,8 @@ body.lp-body {
 // Styles triggerable by Marketo user. Tilts image on large screens, tucks image behind panel - with gradient shadows - on mobile screens
 .lp-asset-boolean {
     .lp-asset-img img {
-        transform: rotate(-2deg);
+        @include rotate-img(-2);
         left: -5px;
-        -webkit-backface-visibility: hidden; /* Chrome, Safari, Opera */
-   	    backface-visibility: hidden;
     }
     
     @media (max-width: $screen-xs-max) {
@@ -114,11 +118,9 @@ img.lp-3-asset-img {
 }
 img.lp-ty-img {
     position: relative;
-    transform: rotate(4deg);
+    @include rotate-img(4);
     max-width: 220px;
     @include lp-img-shadow;
-    -webkit-backface-visibility: hidden; /* Chrome, Safari, Opera */
-   	backface-visibility: hidden;
 }
 
 // Styling intended for the bottom "sanded glass" third of follow-up resource images when viewed on mobile
