--- a/sass/_landing-pages.scss
+++ b/sass/_landing-pages.scss
@@ -61,7 +61,8 @@ body.lp-body {
         z-index: 1;
         display: block;
         position: absolute;
-        @include lp-img-shadow
+        @include lp-img-shadow;
+        padding: 2px;
     } 
     @media (max-width: $screen-xs-max) {
         margin-right: 0px;
