Slight Margin Tweak

--- a/sass/_landing-pages.scss
+++ b/sass/_landing-pages.scss
@@ -114,6 +114,7 @@ img.lp-3-asset-img {
     transform: none !important;
 }
 .lp-video-img img {
+    margin-top: 15px; 
     border: 8px solid white;
 }
 img.lp-ty-img {
