--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -90,6 +90,7 @@
     width: 100% !important;
     margin-bottom: 30px;
 }
+// Prevent margin on bottom if form is in a Well
 .well .mktoForm form {
     margin-bottom: 0;
 }
