--- a/sass/marklogic.com/_buttons.scss
+++ b/sass/marklogic.com/_buttons.scss
@@ -1,3 +1,36 @@
+// NEW CODE TO MATCH WEB UPDATE //
+
+.btn-red {
+    max-width: 100%;
+    background: #fb3449;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    display: inline-block;
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: normal;
+    margin: 0;
+    padding: 11px 17px;
+    text-align: center;
+    text-transform: uppercase;
+    word-break: normal;
+    word-wrap: break-word;
+    white-space: normal;
+    &:hover, &:focus, &:active, &:active:focus {
+        background: #fb4d5f;
+        border: none;
+        color: white;
+    }
+    &:focus {
+        outline: 0;
+        -webkit-box-shadow: 0 0 0 3px rgba(0,123,255,0.25);
+        box-shadow: 0 0 0 3px rgba(0,123,255,0.25);
+    }
+}
+
+// END NEW CODE //
+
 .btn {
     transition: 0.25s;
 }
