--- a/sass/_mkto-forms.scss
+++ b/sass/_mkto-forms.scss
@@ -82,9 +82,9 @@
         width: 100% !important;
           label {
               font-weight: normal;
-              line-height: 20px;
-              font-size: 14px;
-              margin-top: -3px;
+              line-height: 1.42857;
+              font-size: 13px;
+              margin-top: -2px;
               margin-bottom: -5px;
           }
       }
